tests/specs/type_literal_readonly_index_signature.txt
# mod.ts
export type T = { readonly [key: string]: number; }

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export type T = { readonly [key: string]: number; }
  | ^

# output.txt
Defined in file:///mod.ts:0:1

type T = { readonly [key: string]: number; }


# output.json
{
  "symbols": [
    {
      "name": "T",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 0,
            "col": 0,
            "byteIndex": 0
          },
          "declarationKind": "export",
          "kind": "typeAlias",
          "def": {
            "tsType": {
              "repr": "",
              "kind": "typeLiteral",
              "value": {
                "constructors": [],
                "methods": [],
                "properties": [],
                "callSignatures": [],
                "indexSignatures": [
                  {
                    "readonly": true,
                    "params": [
                      {
                        "kind": "identifier",
                        "name": "key",
                        "optional": false,
                        "tsType": {
                          "repr": "string",
                          "kind": "keyword",
                          "value": "string"
                        }
                      }
                    ],
                    "tsType": {
                      "repr": "number",
                      "kind": "keyword",
                      "value": "number"
                    },
                    "location": {
                      "filename": "file:///mod.ts",
                      "line": 0,
                      "col": 18,
                      "byteIndex": 18
                    }
                  }
                ]
              }
            },
            "typeParams": []
          }
        }
      ]
    }
  ]
}
